// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/modal/ForgottenPasswordModal happy path 1`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    id="forgottenPasswordModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Reset Password
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Enter your email address to reset your password.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <button
              className="btn btn-default"
              type="submit"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal happy path 2`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content ReactModal__Content--after-open Modal__Bootstrap modal-dialog modal-lg"
    id="forgottenPasswordModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Reset Password
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Enter your email address to reset your password.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <button
              className="btn btn-default"
              type="submit"
            >
              Submit
            </button>
          </form>
        </div>
        <div
          className="ReactModal__Overlay ReactModal__Overlay--after-open"
          onClick={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.75)",
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            aria-modal={true}
            className="ReactModal__Content ReactModal__Content--after-open Modal__Bootstrap modal-dialog modal-lg"
            id="forgottenPasswordThanks"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            role="dialog"
            style={Object {}}
            tabIndex="-1"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <button
                  aria-label="Close"
                  className="close"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="glyphicon glyphicon-remove"
                  />
                </button>
                <h4
                  className="modal-title"
                >
                  Reset Password
                </h4>
              </div>
              <div
                className="modal-body"
                style={
                  Object {
                    "maxHeight": "55vh",
                    "overflowY": "auto",
                  }
                }
              >
                <div
                  className="container-fluid"
                >
                  <p>
                    Thanks, please check your email for further details.
                  </p>
                </div>
              </div>
              <div
                className="modal-footer"
              >
                <button
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal happy path 3`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content ReactModal__Content--after-open Modal__Bootstrap modal-dialog modal-lg"
    id="forgottenPasswordModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Reset Password
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Enter your email address to reset your password.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <button
              className="btn btn-default"
              type="submit"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal renders closed 1`] = `null`;

exports[`components/modal/ForgottenPasswordModal renders error 1`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    id="forgottenPasswordModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Reset Password
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Enter your email address to reset your password.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div
              className="alert alert-warning alert-dismissible"
              role="alert"
            >
              <button
                aria-label="Close"
                className="close"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
              Error message
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <button
              className="btn btn-default"
              type="submit"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal renders loading 1`] = `null`;

exports[`components/modal/ForgottenPasswordModal reset error 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content ReactModal__Content--after-open Modal__Bootstrap modal-dialog modal-lg"
    id="forgottenPasswordModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Reset Password
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Enter your email address to reset your password.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <button
              className="btn btn-default"
              type="submit"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
